@@ -157,6 +157,7 @@ wxMSW:
 - Fix unexpected change in MDI children order after showing a file dialog.
 - Don't send events for already selected radio popup menu items (Kinaou Hervé).
 - wxListCtrl::GetItemCount() in wxEVT_LIST_INSERT_ITEM is no longer off by 1.
+- Don't send bogus root selection events when clicking wxTreeCtrl (sbrowne).
 
 wxOSX/Cocoa:
 
